# tiny-azagent

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  flake.nix
nix/: nixos-module.nix  package.nix  test-vm.nix
src/: main.rs
